# quackflow

./: .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
examples/: debug_flow.py
examples/streaming_demo/: fill_topics.py  run_pipeline.py  schemas.py  utils.py
src/quackflow/: __init__.py  app.py  batch_runtime.py  engine.py  execution.py  physical.py  repartition.py  runtime.py  schema.py  sink.py  source.py  sql.py  task.py  time_notion.py  transport.py  window.py  worker.py
src/quackflow/_internal/: __init__.py  engine.py  execution.py  sql.py  task.py  transport.py  window.py  worker.py  worker_utils.py
src/quackflow/_internal/distributed/: __init__.py  config.py  flight_client.py  flight_server.py  worker.py
src/quackflow/connectors/kafka/: __init__.py  deserializers.py  serializers.py  sink.py  source.py
src/quackflow/distributed/: __init__.py  config.py  flight_client.py  flight_server.py  worker.py
src/quackflow/testing/: __init__.py  fake_sink.py  fake_source.py
tests/: test_app.py  test_e2e.py  test_engine.py  test_execution.py  test_physical.py  test_repartition.py  test_runtime.py  test_schema.py  test_source.py  test_sql.py  test_time_notion.py  test_window.py
tests/connectors/kafka/: conftest.py  test_deserializers.py  test_kafka_sink.py  test_kafka_source.py  test_serializers.py
tests/distributed/: __init__.py  conftest.py  launcher.py  test_distributed.py
tests/integration/kafka/: conftest.py  test_avro.py  test_data.py  test_pipeline.py  test_roundtrip.py  test_sink.py  test_source.py
