[project]
name = "quackflow"
version = "0.1.0"
description = "Stream aggregations library with SQL interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Peter" }
]
keywords = ["streaming", "sql", "kafka", "aggregation", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "duckdb>=1.0.0",
    "pyarrow>=17.0.0",
    "sqlglot>=28.5.0",
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka>=2.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "confluent-kafka[schema-registry]>=2.3.0",
    "fastavro>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quackflow"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 5
